# tool-webp-converter

./: CHANGELOG.md  pyproject.toml
src/tool_webp_converter/: __init__.py  cli.py  convert.py
