[project]
name = "tool-webp-converter"
version = "0.1.0"
description = "A tool for optimal WebP image compression"
authors = [
    { name = "guilhemheinrich", email = "guilhem.heinrich@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pillow (>=11.3.0,<12.0.0)", "click (>=8.2.1,<9.0.0)"]

[project.scripts]
webp-converter = "tool_webp_converter.cli:main"

[build-system]
requires = [
    "poetry-core>=2.0.0,<3.0.0",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "tool_webp_converter", from = "src" },
]

[tool.poetry.group.dev.dependencies]

[tool.ruff]
src = ["src"]
select = [
    "B",  # flake8-bugbear - https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "C4", # flake8-comprehensions - https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "E",  # pycodestyle errors - https://docs.astral.sh/ruff/rules/#error-e
    "F",  # pyflakes rules - https://docs.astral.sh/ruff/rules/#pyflakes-f
    "N",  # pep8-naming - https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "W",  # pycodestyle warnings - https://docs.astral.sh/ruff/rules/#warning-w
    "I",  # isort - https://docs.astral.sh/ruff/rules/#isort-i
    "UP", # pyupgrade - https://docs.astral.sh/ruff/rules/#pyupgrade-up
]
line-length = 120
